# SHARPpy-Reimagined

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  guam_ifs_09z.json  guam_ifs_09z.npz  hrrr_extract.py  hrrr_point_35.63N_91.30W_20260708_00z_f048.json  hrrr_point_35.63N_91.30W_20260708_00z_f048.npz  hrrr_point_39.02N_88.67W_20260617_00z_f024.json  hrrr_point_39.02N_88.67W_20260617_00z_f024.npz  hrrr_point_39.7567N_97.1925W_20260518_00z_f024.json  hrrr_point_39.7567N_97.1925W_20260518_00z_f024.npz  hrrr_point_44.83N_99.62W_20260707_00z_f022.json  hrrr_point_44.83N_99.62W_20260707_00z_f022.npz  ifs_point_13.07N_145.68E_2026070510.json  ifs_point_13.07N_145.68E_2026070510.npz  installation.txt  pyproject.toml  sounding_parameter_guide.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  rust.yml  tests.yml
attic/legacy_viz/: barbs.py  fetch_uwyo.py
benchmarks/: README.md  benchmark_backends.py  benchmark_decoding.py  benchmark_model_matrix.py  legacy_decoding.py  model_fixtures.example.json  prepare_grib_fixture.py
benchmarks/results/: 2026-07-15-windows-amd64.txt  2026-07-16-all-model-decoding-windows-amd64.json  2026-07-16-all-model-decoding-windows-amd64.md  2026-07-16-decoding-windows-amd64.txt  2026-07-16-nam-decoding-v0.4.0-windows-amd64.json  2026-07-22-all-model-fetch-decode-optimization.md  2026-07-22-rrfs-range-workers.md
docs/: RUST_BACKEND.md  USAGE.md  sounding_parameter_guide.md
docs/superpowers/plans/: 2026-07-10-model-levels-and-data-lifetime.md  2026-07-11-streamwiseness-inset.md  2026-07-12-cli-parcel-selection.md  2026-07-12-default-skewt-parcel-preference.md  2026-07-12-model-fetcher-exe-readiness.md  2026-07-12-sounding-parameter-guide-audit.md
examples/soundings/: 14061619.OAX  hrrr_kbvo_20260625_06z.buf  hrrr_point_36.68N_95.66W_f018.npz  hrrr_point_36.68N_95.66W_f018.spc  hrrr_point_36.68N_95.66W_f018.spc.json
packaging/: make_icon.py  sharpmod_gui.spec  sharpmod_gui_launcher.py
rust/sharpmod-rs/: Cargo.toml  README.md  pyproject.toml
rust/sharpmod-rs/benches/: kernels.rs
rust/sharpmod-rs/src/: grib.rs  interpolation.rs  lib.rs  parsing.rs  quality_control.rs  records.rs  wind.rs
rust/sharpmod-rs/tests/: kernel_contracts.rs
sharpmod/: __init__.py  _version.py  batch_extract.py  colors.py  eccc_geomet.py  gui.py  gui_cache.py  gui_common.py  gui_locations.py  gui_maps.py  gui_picker.py  gui_sessions.py  gui_settings.py  gui_timeline.py  gui_viewer.py  gui_workers.py  hrrr_zarr.py  model_disk_cache.py  model_fields.py  model_hour_cache.py  model_sources.py  model_transport.py  observations.py  profile_inspector.py  profile_timeline.py  render.py  render_patch_registry.py  saved_locations.py  sessions.py
sharpmod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sharpmod/backends/: __init__.py  _common.py  grib.py  protocol.py  python_backend.py  rust_backend.py  selector.py
sharpmod/io/: __init__.py  decoder.py  sharppy_export.py  uwyo_catalog.py  uwyo_decoder.py
sharpmod/resources/: __init__.py  basemap.json  coastlines.json  font_resolver.py  uwyo_stations.json
sharpmod/resources/fonts/: __init__.py
sharpmod/sharptab/: __init__.py  constants.py  derived.py  ecape.py  hazard.py  interp.py  params.py  profile.py  winds.py
sharpmod/tests/: __init__.py  _examples.py  conftest.py  era5_synth.py  strategies.py  test_analysis_sessions.py  test_backend_equivalence.py  test_backend_integration.py  test_backend_packaging.py  test_backend_selection.py  test_batch_extract.py  test_colors_tier_property.py  test_custom_panel_order_property.py  test_custom_panel_rendering.py  test_custom_panel_truncation_property.py  test_dcp_zero_factor.py  test_decode_legacy_equiv.py  test_decoders.py  test_derived_dcp_property.py  test_derived_decoder_agnostic_property.py  test_derived_ehi_property.py  test_derived_hpi_distinct_property.py  test_derived_idempotent_reads_property.py  test_derived_masking_isolation_property.py  test_derived_physical_range_property.py  test_derived_spc_composites.py  test_ecape_property.py  test_ecape_upper_bound.py  test_ecape_zero_cape.py  test_eccc_geomet.py  test_era5_extract_integration.py  test_era5_metadata_property.py  test_era5_nearest_selection_property.py  test_era5_output_completeness_property.py  test_grib_backend_equivalence.py  test_gui_cache_helpers.py  test_gui_default_parcel.py  test_gui_level_editor.py  test_gui_map_interaction.py  test_gui_model_availability.py  (+56 more)
sharpmod/tools/: __init__.py  batch_extract.py  build_basemap.py  build_coastlines.py  build_uwyo_catalog.py  era5_extract.py  ifs_extract.py  model_extract.py  observed_sounding.py  rust_backend_sync.py  uwyo_sounding.py  wrf_extract.py
sharpmod/viz/: SPCWindow.py  __init__.py  _qt6_compat.py  custom_barbs.py  custom_panel.py  hazard.py  hodo_locator.py  index_board.py  inset_layout.py  param_board.py  ship.py  skew.py  streamwiseness.py  thermo.py  unit_text.py
