[package]
name = "sharpmod-rs"
version = "0.4.1"
edition = "2021"
rust-version = "1.88"
description = "Primary Rust numerical and direct GRIB decoding backend for SHARPpy Reimagined"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/ShianMike/SHARPpy-Reimagined"
keywords = ["meteorology", "numpy", "pyo3", "sounding"]
categories = ["science", "api-bindings"]

[lib]
name = "sharpmod_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
libloading = "0.9"
memchr = "2.7"
memmap2 = "0.9"
numpy = "0.29"
pyo3 = { version = "0.29", features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "kernels"
harness = false

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
